--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <dimen name="elevation_shadow">7dp</dimen>
+    <dimen name="radius_cardview">10dp</dimen>
+
     <dimen name="width_edittext_rightbutton">30dp</dimen>
     <dimen name="margin_santaedittext_edittext_vertical">9dp</dimen>
     <dimen name="margin_santaedittext_button_vertical">8dp</dimen>
@@ -7,4 +10,7 @@
 
     <dimen name="size_santabottombutton_text">18sp</dimen>
     <dimen name="padding_santabottombutton_vertical">10dp</dimen>
+
+    <dimen name="size_satnaimageroundbutton_title">17sp</dimen>
+    <dimen name="size_santaimageroundbutton_description">14sp</dimen>
 </resources>
