--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -13,4 +13,9 @@
 
     <dimen name="size_satnaimageroundbutton_title">17sp</dimen>
     <dimen name="size_santaimageroundbutton_description">14sp</dimen>
+
+    <dimen name="padding_santacheckbox_horizontal">16dp</dimen>
+    <dimen name="margin_santacheckbox_textpadding_start">15dp</dimen>
+    <dimen name="size_santacheckbox_buttontext">16sp</dimen>
+    <dimen name="width_santacheckbox_checkbox">25dp</dimen>
 </resources>
