--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="gray_3">#666666</color>
 
     <color name="red">#f31523</color>
+    <color name="navy">#00154B</color>
 </resources>
