feat: Triggering button available by user name state (empty or not)

--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -3,6 +3,12 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <data>
+        <variable
+            name="viewModel"
+            type="org.sopt.santamanitto.signin.SignInViewModel" />
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -85,6 +91,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/margin_signin_edittext_top"
                     android:layout_marginBottom="@dimen/padding_signin_cardview_bottom_additional"
+                    setText="@={viewModel.userName}"
                     app:hint="@string/signin_edittext_hint"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -100,7 +107,7 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/padding_entire"
             android:layout_marginBottom="@dimen/margin_signin_button_bottom"
-            android:enabled="false"
+            android:enabled="@{viewModel.isUserNameValid()}"
             android:text="@string/signin_button_next"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
