--- a/app/src/main/res/navigation/navigation_santa.xml
+++ b/app/src/main/res/navigation/navigation_santa.xml
@@ -1,10 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/santa_navigation"
-    app:startDestination="@id/signInFragment">
-
+    app:startDestination="@id/enterNameFragment">
     <fragment
-        android:id="@+id/signInFragment"
-        android:name="org.sopt.santamanitto.signin.SignInFragment"
-        android:label="SignInFragment" />
+        android:id="@+id/enterNameFragment"
+        android:name="org.sopt.santamanitto.signin.fragment.EnterNameFragment"
+        android:label="EnterNameFragment" >
+        <action
+            android:id="@+id/action_enterNameFragment_to_conditionFragment"
+            app:destination="@id/conditionFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/conditionFragment"
+        android:name="org.sopt.santamanitto.signin.fragment.ConditionFragment"
+        android:label="ConditionFragment" >
+        <argument
+            android:name="userName"
+            app:argType="string" />
+    </fragment>
 </navigation>
