--- a/app/src/main/res/layout/fragment_condition.xml
+++ b/app/src/main/res/layout/fragment_condition.xml
@@ -5,9 +5,9 @@
 
     <data>
 
-<!--        <variable-->
-<!--            name="viewModel"-->
-<!--            type="org.sopt.santamanitto.signin.viewmodel.SignInViewModel" />-->
+        <variable
+            name="viewModel"
+            type="org.sopt.santamanitto.signin.viewmodel.ConditionViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -128,6 +128,7 @@
             android:layout_marginHorizontal="@dimen/padding_entire"
             android:layout_marginBottom="@dimen/margin_signin_button_bottom"
             android:text="@string/entername_button_next"
+            android:enabled="@{viewModel.isReady()}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
