feat: Add WebViewFragment for tos and privacy policy

--- a/app/src/main/res/navigation/navigation_santa.xml
+++ b/app/src/main/res/navigation/navigation_santa.xml
@@ -17,5 +17,16 @@
         <argument
             android:name="userName"
             app:argType="string" />
+        <action
+            android:id="@+id/action_conditionFragment_to_webViewFragment"
+            app:destination="@id/webViewFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/webViewFragment"
+        android:name="org.sopt.santamanitto.signin.fragment.WebViewFragment"
+        android:label="WebViewFragment" >
+        <argument
+            android:name="url"
+            app:argType="string" />
     </fragment>
 </navigation>
