feat: Set single line on enter name SantaEditText

--- a/app/src/main/res/layout/fragment_enter_name.xml
+++ b/app/src/main/res/layout/fragment_enter_name.xml
@@ -90,6 +90,7 @@
                 <org.sopt.santamanitto.view.SantaEditText
                     setText="@={viewModel.userName}"
                     android:layout_width="match_parent"
+                    app:isSingleLine="false"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/margin_signin_edittext_top"
                     android:layout_marginBottom="@dimen/padding_signin_cardview_bottom_additional"
