--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="elevation_shadow">7dp</dimen>
+    <dimen name="elevation_shadow">4dp</dimen>
     <dimen name="radius_cardview">10dp</dimen>
     <dimen name="padding_entire">16dp</dimen>
 
@@ -86,6 +86,7 @@
     <dimen name="margin_mymanitto_state_top">7dp</dimen>
     <dimen name="margin_mymanitto_mission_top">25dp</dimen>
     <dimen name="size_main_mymanitto">20sp</dimen>
+    <dimen name="margin_mymanitto_item_decoration">16dp</dimen>
 
 
 </resources>
